--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -2011,6 +2011,45 @@
     filter:opacity(90%)
 }
 
+/* product-buy-notify */
+.success-message {
+    display: none;
+    position: fixed;
+    width: 350px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #00000093;
+    color: white;
+    border-radius: 2px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    font-size: 1.7rem;
+    z-index: 1000;
+}
+
+.success-message-box{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50%;
+    transform: translateY(-63%);
+}
+
+.success-message-img{
+    width: 60px;
+    
+}
+
+.success-message-text{
+    display: block;
+    margin-top: 20px;
+    /* text-align: center; */
+}
+
+
 /* product-details */
 .product-details{
     /* background-color: #0088ff;
