--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -454,23 +454,28 @@
     flex-direction: column;
     align-items: center;
     border-radius: 2px;
-    display: none;
+    /* display: none; */
     box-shadow: var(--shadow);
     padding-bottom: 15px;
 }
 
+.header-cart-empty{
+    width: 100%;
+    height: 100%;
+    /* display: flex; */
+    justify-content: center;
+}
+
 .header-cart-list-img{
     width: 50%;
-    display: none;
 }
 
 .header-cart-text{
-    /* display: block; */
+    display: block;
     color: var(--text-color);
     font-size: 1.4rem;
     position: absolute;
     top: 78%;
-    display: none;
 }
 
 .header-cart-list::before{
@@ -500,13 +505,14 @@
     animation: Growth ease-in-out 0.2s;
 }
 
-/* .header-cart-list .header-cart-list-img,
+.header-cart-list .header-cart-list-img,
 .header-cart-list .header-cart-text{
-    display: block;
-} */
+    /* display: block; */
+}
 
 /* has cart */
 .header-cart-has-cart{
+    /* display: none; */
 }
 
 .header-cart-heading{
@@ -621,11 +627,14 @@
     width: 757px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     background-color: var(--white-color);
     border-radius: 2px;
     display: none;
     z-index: 4;
     box-shadow: 0 2px 10px -1px rgba(179, 179, 179, 0.423);
+    max-height: 300px;
+    overflow-y: auto;
 }
 
 .header-search-input:focus ~ .header-search-history{
@@ -633,6 +642,7 @@
 }
 
 .header-search-history-link{
+    display: block;
     text-decoration: none;
     color: var(--text-color);
     font-size: 1.4rem;
