--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -454,7 +454,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 2px;
-    /* display: none; */
+    display: none;
     box-shadow: var(--shadow);
     padding-bottom: 15px;
 }
