--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -454,7 +454,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 2px;
-    display: none;
+    /* display: none; */
     box-shadow: var(--shadow);
     padding-bottom: 15px;
 }
@@ -467,7 +467,10 @@
 }
 
 .header-cart-list-img{
-    width: 50%;
+    
+    margin: 50px 0 50px 0;
+    display: block;
+
 }
 
 .header-cart-text{
