--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -667,8 +667,9 @@
 
 /* contain */
 .contain-header{
-    /* background-color: #2dd1ee; */
-    /* box-shadow: 0 10px 10px rgba(211, 211, 211, 0.608); */
+    background-color: white;
+    box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.305);
+    margin-bottom: 20px;
 }
 
 .contain-header-banner{
@@ -713,7 +714,6 @@
 .slider-container {
     position: relative;
     overflow: hidden;
-    padding-right: ;
 }
 
 .slider {
@@ -788,6 +788,7 @@
 .contain-section{
     position: relative;
     border-radius: 2px;
+    box-shadow: 0 0 4px -2px rgba(0, 0, 0, 0.305);
 }
 
 .contain-section-header{
