--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -1,3 +1,5 @@
+/* Author: Trần Nguyễn Khánh Hoàng  */
+
 .header{
     height: 119px;
     background-image: linear-gradient(-180deg,#f53d2d,#f63);
